--- a/src/components/Carta/index.css
+++ b/src/components/Carta/index.css
@@ -1,4 +1,6 @@
 .deshabilitada{
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
+    transition: 2s;
+    transform: rotate(180deg);
 }
